--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         {
             success++
             welldone.innerHTML = `<h1 style= "color : green"> כל הכבוד אהובה שלי</h1>
-            <h1 class="animate__animated animate__tada animate__repeat-3">יההה </h1>`
+            <h1 class="animate__animated animate__tada animate__repeat-3"><span style='font-size:100px; color:red'>&#10084;</span>יההה 
+                </h1>`
             createExcercise()
             mult.value=''
     
@@ -117,7 +118,7 @@
         else             
            {
             welldone.innerHTML = `<h1 style= "color : red">נסי שוב</h1> 
-            <h1 class="animate__animated animate__pulse animate__repeat-3" >באסה </h1>`
+            <h1 class="animate__animated animate__pulse animate__repeat-3" ><span style='font-size:100px'>&#128103;</span>באסה </h1>`
             mult.value=''
             
             }
